# juxtapose

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  demo.py  index.spec  pyproject-hatch.toml  pyproject.toml  requirements.txt  server.py  test.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: cd.yml  ci.yml  docker.yml  exe.yml  pip.yml
docs/: next.config.js  package.json  pnpm-lock.yaml  theme.config.tsx
docs/components/: Logo.tsx  Tabs.tsx
docs/pages/: _meta.json  getting-started.mdx  index.mdx  installation.mdx
docs/pages/getting-started/: _meta.json  rtm.mdx  tapnet.mdx
examples/: rtm.py  tapnet.py
examples/fastapi/: Dockerfile  main.py  requirements.txt
examples/fastapi-pyinstaller/: README.md  requirements.txt  server.py
examples/fastapi-pyinstaller/ultralytics/utils/: __init__.py
examples/fastapi-pyinstaller/yapf_third_party/_ylib2to3/: pygram.py
rtm/: __init__.py  rtm.py  rtmdet.py  rtmpose.py  tapnet.py
rtm/data/: build.py  loaders.py
rtm/detectors/: __init__.py
rtm/detectors/groundingdino/: __init__.py
rtm/detectors/rtmdet/: __init__.py
rtm/detectors/yolov8/: __init__.py
rtm/kinematics/: constants.py  derivatives.py  kinematics.py
rtm/mmdeploy/apis/: extract_model.py  inference.py  pytorch2onnx.py  visualize.py
rtm/mmdeploy/apis/core/: pipeline_manager.py
rtm/mmdeploy/apis/onnx/: partition.py
rtm/mmdeploy/apis/openvino/: utils.py
rtm/mmdeploy/apis/rknn/: __init__.py
rtm/mmdeploy/apis/sdk/: __init__.py
rtm/mmdeploy/apis/torch_jit/: trace.py
rtm/mmdeploy/backend/base/: backend_wrapper_registry.py
rtm/mmdeploy/backend/onnxruntime/: init_plugins.py  wrapper.py
rtm/mmdeploy/codebase/base/: backend_model.py
rtm/mmdeploy/core/rewriters/: function_rewriter.py  rewriter_utils.py
rtm/mmdeploy/mmcv/ops/: nms.py  transformer.py
rtm/mmdeploy/pytorch/functions/: adaptive_pool.py  cat.py  flatten.py  linspace.py  masked_fill.py  mod.py  multi_head_attention_forward.py  tensor_getitem.py
rtm/mmdeploy/pytorch/symbolics/: hardsigmoid.py  instance_norm.py
rtm/mmdeploy/utils/: utils.py
rtm/model/rtmdet-l/: detail.json  end2end.onnx  pipeline.json
rtm/model/rtmdet-m/: detail.json  end2end.onnx  pipeline.json
rtm/model/rtmdet-s/: deploy.json  detail.json  end2end.onnx  pipeline.json
rtm/model/rtmpose-l/: deploy.json  detail.json  end2end.onnx  pipeline.json
rtm/model/rtmpose-m/: detail.json  end2end.onnx
rtm/model/rtmpose-s/: detail.json  end2end.onnx
rtm/requirements/: mac.txt  windows.txt
rtm/trackers/: __init__.py  byte_tracker.py  track.py
rtm/trackers/boxmot/: __init__.py  tracker_zoo.py
rtm/trackers/boxmot/appearance/: reid_model_factory.py  reid_multibackend.py
rtm/trackers/boxmot/postprocessing/: gsi.py
rtm/trackers/boxmot/utils/: __init__.py  association.py  checks.py  convert_rtm_boxmot.py
rtm/trackers/utils/: gmc.py
rtm/utils/: checks.py  core.py  ops.py  plotting.py  roi.py  torch_utils.py
script/: build.sh
src/: server.py
src/juxtapose/: __init__.py  rtm.py  rtmpose.py  singletap.py  tapnet.py
src/juxtapose/conf/: rtmdet-l.py
src/juxtapose/data/: __init__.py  build.py  loaders.py  utils.py
src/juxtapose/detectors/: __init__.py
src/juxtapose/detectors/groundingdino/: __init__.py
src/juxtapose/detectors/rtmdet/: __init__.py  utils.py
src/juxtapose/detectors/yolov8/: __init__.py
src/juxtapose/mmdeploy/: __init__.py
src/juxtapose/mmdeploy/apis/: calibration.py  extract_model.py  inference.py  pytorch2onnx.py  pytorch2torchscript.py  visualize.py
src/juxtapose/mmdeploy/codebase/: __init__.py
src/juxtapose/mmdeploy/utils/: config_utils.py  env.py  test.py  timer.py  utils.py
src/juxtapose/pose/rtmpose/: __init__.py  legacy.py  postprocessing.py  preprocessing.py
src/juxtapose/trackers/: __init__.py  byte_tracker.py  track.py
src/juxtapose/trackers/boxmot/: __init__.py  tracker_zoo.py
src/juxtapose/trackers/tapnet/: .gitignore  evaluation_datasets.py  experiment.py  live_demo.py  supervised_point_prediction.py  tapir_clustering.py  tapir_model.py  tapnet_model.py
src/juxtapose/trackers/utils/: gmc.py  kalman_filter.py  matching.py
src/juxtapose/utils/: __init__.py  checks.py  core.py  downloads.py  ops.py  polygon.py  roi.py  torch_utils.py
src/pose/: rtm.py  rtmpose.py  tapnet.py
src/pose/conf/: rtmdet-m.py
src/pose/data/: build.py  loaders.py
src/pose/detectors/groundingdino/: __init__.py
src/pose/detectors/rtmdet/: __init__.py
src/pose/detectors/yolov8/: __init__.py
src/pose/mmdeploy/: __init__.py
src/pose/mmdeploy/apis/: calibration.py  extract_model.py  inference.py  pytorch2onnx.py  pytorch2torchscript.py  visualize.py
src/pose/mmdeploy/codebase/: __init__.py
src/pose/mmdeploy/utils/: env.py  test.py  timer.py  utils.py
src/pose/trackers/: byte_tracker.py
src/pose/trackers/utils/: gmc.py  matching.py
src/pose/utils/: __init__.py  checks.py  downloads.py  patches.py  plotting.py  roi.py  torch_utils.py
src/rtm/: rtmpose.py
src/rtm/conf/: rtmdet-s.py
src/rtm/detectors/: __init__.py
src/rtm/detectors/groundingdino/: __init__.py
src/rtm/detectors/rtmdet/: __init__.py
src/rtm/detectors/yolov8/: __init__.py
src/rtm/mmdeploy/apis/: calibration.py
src/rtm/mmdeploy/codebase/: __init__.py
src/rtm/mmdeploy/utils/: env.py  test.py
src/rtm/trackers/: __init__.py  bot_sort.py  byte_tracker.py
src/rtm/types/: __init__.py
src/rtm/utils/: __init__.py  downloads.py  roi.py
(+358 files in other folders)
