[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "juxtapose"
version = "0.0.4"
authors = [
  { name="Yeow Zi Qin", email="ziqinyeow@gmail.com" },
]
description = "A pose detection, tracking, and estimation hub that streamline 2D human sports analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
]
keywords = ['pose estimation', 'machine learning']
dependencies = [
    'pydantic',
    'packaging==23.1',
    'onnx==1.14.0',
    'onnxruntime==1.15.1',
    'aenum==3.1.15',
    'tqdm==4.65.0',
    'transformers',
    'addict',
    'yapf',
    'timm',
    'supervision',
    'pycocotools',
    'ultralytics',
    'mmengine==0.9.0',
    'mmdet==3.2.0',
    'mmpose==1.2.0',
    'mmcv==2.1.0',
    'torch==2.0.1',
    'onnxruntime-gpu==1.15.1 ; sys_platform == "win32"',
]

[project.urls]
"Homepage" = "https://github.com/ziqinyeow/juxtapose-sdk"
"Bug Tracker" = "https://github.com/ziqinyeow/juxtapose-sdk/issues"