[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "juxtapose"
version = "0.0.34"
description = ""
authors = ["Zi Qin <ziqinyeow@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
]
keywords = ['pose estimation', 'pose tracking', 'computer vision', 'deep learning', 'machine learning']
packages = [
    { include = "juxtapose", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
packaging = {version = "23.1"}
aenum = {version = "3.1.15"}
tqdm = {version = "^4.65.0"}
transformers = {version = "*"}
addict = {version = "*"}
yapf = {version = "*"}
timm = {version = "*"}
supervision = {version = "0.17.1"}
pycocotools = {version = "*"}
lapx = {version = "0.5.2"}
opencv-contrib-python = {version = "*"}
opencv-python = {version = "*"}
# mmengine = {version = "0.9.0"}
# mmdet = {version = "3.2.0"}
# mmpose = {version = "1.2.0"}
# mmcv = [
#     {platform = 'win32', version='2.1.0', source = "mmcv-cu118"},
#     {platform = 'linux', version='2.1.0', source = "mmcv-cu118"},
#     {platform = 'darwin', version='2.1.0', source = "mmcv-cpu"}
# ]
# torch = [
#     # {platform = 'win32', url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-win_amd64.whl"},
#     # {platform = "linux", url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl"},
#     # {platform = "darwin", url = "https://download.pytorch.org/whl/cpu/torch-2.0.1-cp310-none-macosx_11_0_arm64.whl"},
#     {platform = 'win32', source = "torch+cu118", version = "2.0.1"},
#     {platform = "linux", version = "2.0.1"},
#     {platform = "darwin", version = "2.0.1"},
# ]
onnx = "1.16.0"
onnxruntime = [{version = "1.17.1", platform = "darwin"}, {version = "1.17.1", platform = "linux"}, ]
onnxruntime-gpu = [{version = "1.17.1", platform = "win32"}]

# fastapi
# uvicorn[standard]
# python-multipart
# juxtapose

# tapnet
chex = {version = "*"}
jax = {version = "0.4.24"}
jaxlib = {version = "0.4.23"}
jaxline = {version = "*"}
optax = {version = "*"}
dm-haiku = {version = "*"}
dm-tree = {version = "*"}
typing_extensions = {version = "*"}
mediapy = {version = "*"}
einshape = {version = "*"}
ipympl = {version = "*"}

# [[tool.poetry.source]]
# name = "torch+cu118"
# url = "https://download.pytorch.org/whl/cu118"
# priority = "explicit"

# [[tool.poetry.source]]
# name = "mmcv-cpu"
# url = "https://download.openmmlab.com/mmcv/dist/cpu/torch2.0/index.html"
# priority = "explicit"

# [[tool.poetry.source]]
# name = "mmcv-cu118"
# url = "https://download.openmmlab.com/mmcv/dist/cu118/torch2.0/index.html"
# priority = "explicit"

[tool.poetry.urls]
"Homepage" = "https://juxt.space"
"Documentation" = "https://sdk.juxt.space"
"Source Code" = "https://github.com/ziqinyeow/juxtapose"
"Bug Tracker" = "https://github.com/ziqinyeow/juxtapose/issues"

